# SolSci

./: .gitignore  Anchor.toml  Cargo.toml  PITCH_DECK.md  README.md  SOLSCI-PROTOCOL.md  package.json  vercel.json
.github/workflows/: solsci.yml
app/: index.html  package.json  vite.config.ts
app/public/: index.html
app/public/demo/: rna_seq_demo.csv
app/src/: App.tsx  index.css  index.tsx
app/src/components/: Dashboard.tsx  ui.tsx
app/src/hooks/: useFeed.ts  useRegister.ts  useVerify.ts
app/src/idl/: solsci.json
app/src/lib/: constants.ts  program.ts  utils.ts
engine/: Cargo.toml
engine/src/: cli.rs  hash.rs  main.rs  metadata.rs  solana.rs
landing/: index.html
programs/solsci/: Cargo.toml
programs/solsci/src/: lib.rs
qvac/: package.json
qvac/src/: assist.js  embed.js  ipfs.js  ocr.js  queue.js  server.js  transcribe.js  translate.js
scripts/: e2e-devnet.mjs
tests/: solsci.ts
