[package]
name = "solsci-engine"
version = "0.1.0"
edition = "2021"
description = "SolSci hash pipeline — wraps BioFastq-A output and submits proofs to Solana"

[[bin]]
name = "solsci-engine"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.30.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
shellexpand = "3"
