[package]
name        = "solsci-engine"
version     = "0.1.0"
edition     = "2021"
description = "SolSci hash pipeline — stamp analysis output files on Solana"

[[bin]]
name = "solsci-engine"
path = "src/main.rs"

[dependencies]
anyhow       = "1"
clap         = { version = "4", features = ["derive"] }
hex          = "0.4"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sha2         = "0.10"
shellexpand  = "3"
solana-client           = "2.2"
solana-sdk              = "2.2"
solana-system-interface = "1"
